@@ -134,14 +134,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
-                <configuration>
-                    <argLine>
-                        -javaagent:/home/cstefc/.m2/repository/org/mockito/mockito-core/5.14.0/mockito-core-5.14.0.jar
-                        --add-opens java.base/java.lang=ALL-UNNAMED
-                        --add-opens java.base/java.util=ALL-UNNAMED
-                        --add-opens java.base/java.lang.invoke=ALL-UNNAMED
-                    </argLine>
-                </configuration>
             </plugin>
 
             <!-- Checkstyle -->
